@@ -230,7 +230,7 @@ HYPHEN		--
 	String s (YYText ()+1);
 	s = s.left_string (s.index_last ('"'));
 
-	new_input (s, &global_input_file->sources_ );
+	new_input (s, &global_input_file->sources_);
 	yy_pop_state ();
 }
 <incl>\\{BLACK}*;?{WHITE} { /* got the include identifier */
